Change catalogSideBar so invisible button is no longer clickable.

--- a/org.matonto.web/src/main/resources/public/modules/catalog/directives/catalogSideBar/catalogSideBar.scss
+++ b/org.matonto.web/src/main/resources/public/modules/catalog/directives/catalogSideBar/catalogSideBar.scss
@@ -2,6 +2,9 @@
 @import "./src/main/resources/public/css/variables";
 
 .catalog-side-bar {
+    li:first-child button {
+        cursor: auto;
+    }
     li:last-child {
         position: absolute;
         bottom: 0;
